5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1793_1614.log
== TEST (2019-05-30 18:11:55) 
-- CODE:
from numpy import*
n=input("sdfghjkjgfdsd")
q=
-- ERROR:
File "XXXX", line 3
    q=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:16:15) 
-- CODE:
from numpy import*
n=array(eval(input("dfef")))
q=array(eval(input("dfghj")))

h=sum(q)
print(round(q,2))
-- EXECUTION TIME:
0.467179
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1614/main.py", line 6, in <module>
    print(round(q,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:16:17) 
-- CODE:
from numpy import*
n=array(eval(input("dfef")))
q=array(eval(input("dfghj")))

h=sum(q)
print(round(q,2))
-- EXECUTION TIME:
0.452188
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1614/main.py", line 6, in <module>
    print(round(q,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:17:50) 
-- CODE:
from numpy import*
n=input("dfef")
q=array(eval(input("dfghj")))

h=sum(q)
print(round(q,2))
-- EXECUTION TIME:
0.370885
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1614/main.py", line 6, in <module>
    print(round(q,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:17:52) 
-- CODE:
from numpy import*
n=input("dfef")
q=array(eval(input("dfghj")))

h=sum(q)
print(round(q,2))
-- EXECUTION TIME:
0.498347
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1614/main.py", line 6, in <module>
    print(round(q,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:17:52) 
-- CODE:
from numpy import*
n=input("dfef")
q=array(eval(input("dfghj")))

h=sum(q)
print(round(q,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:18:32) 
-- CODE:
from numpy import*
n=input("dfef").upper()
q=array(eval(input("dfghj")))

h=sum(q)
print(round(q,2))
-- EXECUTION TIME:
0.515557
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1614/main.py", line 6, in <module>
    print(round(q,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:18:37) 
-- CODE:
from numpy import*
n=input("dfef").upper()
q=array(eval(input("dfghj")))

h=sum(q)
print(round(q,2))
-- EXECUTION TIME:
1.32178
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1614/main.py", line 6, in <module>
    print(round(q,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:18:38) 
-- CODE:
from numpy import*
n=input("dfef").upper()
q=array(eval(input("dfghj")))

h=sum(q)
print(round(q,2))
-- EXECUTION TIME:
1.65482
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1614/main.py", line 6, in <module>
    print(round(q,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:18:38) 
-- CODE:
from numpy import*
n=input("dfef").upper()
q=array(eval(input("dfghj")))

h=sum(q)
print(round(q,2))
-- EXECUTION TIME:
0.160431
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1793/1614/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:18:40) 
-- CODE:
from numpy import*
n=input("dfef").upper()
q=array(eval(input("dfghj")))

h=sum(q)
print(round(q,2))
-- EXECUTION TIME:
3.38512
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1614/main.py", line 6, in <module>
    print(round(q,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:18:43) 
-- CODE:
from numpy import*
n=input("dfef").upper()
q=array(eval(input("dfghj")))

h=sum(q)
print(round(q,2))
-- EXECUTION TIME:
3.54624
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1614/main.py", line 6, in <module>
    print(round(q,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:18:43) 
-- CODE:
from numpy import*
n=input("dfef").upper()
q=array(eval(input("dfghj")))

h=sum(q)
print(round(q,2))
-- EXECUTION TIME:
3.07542
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1614/main.py", line 6, in <module>
    print(round(q,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:18:45) 
-- CODE:
from numpy import*
n=input("dfef").upper()
q=array(eval(input("dfghj")))

h=sum(q)
print(round(q,2))
-- EXECUTION TIME:
2.61851
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1614/main.py", line 6, in <module>
    print(round(q,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:18:46) 
-- CODE:
from numpy import*
n=input("dfef").upper()
q=array(eval(input("dfghj")))

h=sum(q)
print(round(q,2))
-- EXECUTION TIME:
3.87582
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1614/main.py", line 6, in <module>
    print(round(q,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:18:46) 
-- CODE:
from numpy import*
n=input("dfef").upper()
q=array(eval(input("dfghj")))

h=sum(q)
print(round(q,2))
-- EXECUTION TIME:
3.81737
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1614/main.py", line 6, in <module>
    print(round(q,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:18:46) 
-- CODE:
from numpy import*
n=input("dfef").upper()
q=array(eval(input("dfghj")))

h=sum(q)
print(round(q,2))
-- EXECUTION TIME:
2.80423
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1614/main.py", line 6, in <module>
    print(round(q,2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:19:55) 
-- CODE:
from numpy import*
n=input("dfef").upper()
q=array(eval(input("dfghj")))

h=sum(q)
w=(h,dtype=int)
print(round(q,2))
-- EXECUTION TIME:
0.160641
-- ERROR:
  File "/home/codebench/codes/1793/1614/main.py", line 6
    w=(h,dtype=int)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:19:57) 
-- CODE:
from numpy import*
n=input("dfef").upper()
q=array(eval(input("dfghj")))

h=sum(q)
w=(h,dtype=int)
print(round(q,2))
-- EXECUTION TIME:
0.29887
-- ERROR:
  File "/home/codebench/codes/1793/1614/main.py", line 6
    w=(h,dtype=int)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:19:57) 
-- CODE:
from numpy import*
n=input("dfef").upper()
q=array(eval(input("dfghj")))

h=sum(q)
w=(h,dtype=int)
print(round(q,2))
-- EXECUTION TIME:
0.173849
-- ERROR:
  File "/home/codebench/codes/1793/1614/main.py", line 6
    w=(h,dtype=int)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:28:06) 
-- CODE:
from numpy import*
n=array(eval(input("fghjklç")))
q=array(eval(input("dfghj")))

h=sum(q)
w=(h,dtype=int)
print(round(q,2))
-- EXECUTION TIME:
0.168791
-- ERROR:
  File "/home/codebench/codes/1793/1614/main.py", line 6
    w=(h,dtype=int)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:28:06) 
-- CODE:
from numpy import*
n=array(eval(input("fghjklç")))
q=array(eval(input("dfghj")))

h=sum(q)
w=(h,dtype=int)
print(round(q,2))
-- EXECUTION TIME:
0.234272
-- ERROR:
  File "/home/codebench/codes/1793/1614/main.py", line 6
    w=(h,dtype=int)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:28:06) 
-- CODE:
from numpy import*
n=array(eval(input("fghjklç")))
q=array(eval(input("dfghj")))

h=sum(q)
w=(h,dtype=int)
print(round(q,2))
-- EXECUTION TIME:
0.310344
-- ERROR:
  File "/home/codebench/codes/1793/1614/main.py", line 6
    w=(h,dtype=int)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:31:39) 
-- CODE:
from numpy import*
n=array(eval(input("fghjklç")))
q=array(eval(input("dfghj")))

h=sum(q)
w=(h,dtype=int)

if(n)



print(round(q,2))
-- ERROR:
File "XXXX", line 6
    w=(h,dtype=int)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:31:42) 
-- CODE:
from numpy import*
n=array(eval(input("fghjklç")))
q=array(eval(input("dfghj")))

h=sum(q)
w=(h,dtype=int)

if(n)



print(round(q,2))
-- ERROR:
File "XXXX", line 6
    w=(h,dtype=int)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:31:42) 
-- CODE:
from numpy import*
n=array(eval(input("fghjklç")))
q=array(eval(input("dfghj")))

h=sum(q)
w=(h,dtype=int)

if(n)



print(round(q,2))
-- ERROR:
File "XXXX", line 6
    w=(h,dtype=int)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:43) 
-- CODE:
from numpy import*
n=array(eval(input("fghjklç")))
q=array(eval(input("dfghj")))

h=sum(q)
w=(h,dtype=int)

if(n)



print(round(q,2))
-- EXECUTION TIME:
1.10233
-- ERROR:
  File "/home/codebench/codes/1793/1614/main.py", line 6
    w=(h,dtype=int)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:43) 
-- CODE:
from numpy import*
n=array(eval(input("fghjklç")))
q=array(eval(input("dfghj")))

h=sum(q)
w=(h,dtype=int)

if(n)



print(round(q,2))
-- EXECUTION TIME:
0.817359
-- ERROR:
  File "/home/codebench/codes/1793/1614/main.py", line 6
    w=(h,dtype=int)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:43) 
-- CODE:
from numpy import*
n=array(eval(input("fghjklç")))
q=array(eval(input("dfghj")))

h=sum(q)
w=(h,dtype=int)

if(n)



print(round(q,2))
-- EXECUTION TIME:
0.894316
-- ERROR:
  File "/home/codebench/codes/1793/1614/main.py", line 6
    w=(h,dtype=int)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:44) 
-- CODE:
from numpy import*
n=array(eval(input("fghjklç")))
q=array(eval(input("dfghj")))

h=sum(q)
w=(h,dtype=int)

if(n)



print(round(q,2))
-- EXECUTION TIME:
0.522392
-- ERROR:
  File "/home/codebench/codes/1793/1614/main.py", line 6
    w=(h,dtype=int)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:31:58) 
-- CODE:
from numpy import*
n=array(eval(input("fghjklç")))
q=array(eval(input("dfghj")))

h=sum(q)





print(round(h,2))
-- EXECUTION TIME:
0.437326
-- TEST CASE 1:
---- input:
["BANANA","FEIJOADA","TOMATE"]
[300,50,60]
---- correct output:
366.5
---- user output:
410
-- TEST CASE 2:
---- input:
["BANANA","FEIJOADA","OMELETE"]
[150,100,60]
---- correct output:
334.9
---- user output:
310
-- TEST CASE 3:
---- input:
["OMELETE","FEIJOADA","BIFE"]
[100,130,140]
---- correct output:
682.1
---- user output:
370
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:31:58) 
-- CODE:
from numpy import*
n=array(eval(input("fghjklç")))
q=array(eval(input("dfghj")))

h=sum(q)





print(round(h,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:31:59) 
-- CODE:
from numpy import*
n=array(eval(input("fghjklç")))
q=array(eval(input("dfghj")))

h=sum(q)





print(round(h,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:32:01) 
-- CODE:
from numpy import*
n=array(eval(input("fghjklç")))
q=array(eval(input("dfghj")))

h=sum(q)





print(round(h,2))
-- EXECUTION TIME:
0.418845
-- TEST CASE 1:
---- input:
["BANANA","FEIJOADA","TOMATE"]
[300,50,60]
---- correct output:
366.5
---- user output:
410
-- TEST CASE 2:
---- input:
["BANANA","FEIJOADA","OMELETE"]
[150,100,60]
---- correct output:
334.9
---- user output:

-- TEST CASE 3:
---- input:
["OMELETE","FEIJOADA","BIFE"]
[100,130,140]
---- correct output:
682.1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:41:23) 
-- CODE:
from numpy import*

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
